--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -31,8 +31,7 @@ endorsed.classpath=
 excludes=
 includes=**
 jar.compress=false
-javac.classpath=\
-    ${libs.commons-lang3.classpath}
+javac.classpath=
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
